my_grammar/my_grammarParser.py
# Generated from my_grammar.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class my_grammarParser ( Parser ):

    grammarFileName = "my_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "'+'", "'-'", "'*'", 
                     "'**'", "'/'", "'%'", "'//'", "'@'", "'<'", "'>'", 
                     "'=='", "'>='", "'<='", "'<>'", "'!='", "'|'", "'^'", 
                     "'&'", "'not'", "'is'", "'in'", "'elif'", "'else'", 
                     "'if'", "','", "':'", "';'", "'<<'", "'>>'", "'+='", 
                     "'-='", "'*='", "'@='", "'/='", "'%='", "'&='", "'|='", 
                     "'^='", "'<<='", "'>>='", "'**='", "'//='", "'await'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'def'", "'while'", "'for'", "'range'", "'yield'", 
                     "'lambda'", "'~'", "'print'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NEWLINE", "NAME", "NUMBER", 
                      "STRING", "COMMENT", "INDENT", "DEDENT", "ASSIGN", 
                      "PLUS", "MINUS", "STAR", "POWER", "DIV", "MOD", "IDIV", 
                      "AT", "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", 
                      "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "OR", "XOR", "AND", 
                      "NOT", "IS", "IN", "ELIF", "ELSE", "IF", "COMMA", 
                      "COLON", "SEMI_COLON", "LEFT_SHIFT", "RIGHT_SHIFT", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MULT_ASSIGN", "AT_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
                      "XOR_ASSIGN", "LEFT_SHIFT_ASSIGN", "RIGHT_SHIFT_ASSIGN", 
                      "POWER_ASSIGN", "IDIV_ASSIGN", "AWAIT", "ATOM", "DIGIT", 
                      "LETTER", "WHITESPACE", "DEF", "WHILE", "FOR", "RANGE", 
                      "YIELD", "LAMBDA", "TILDE", "PRINT" ]

    RULE_file_input = 0
    RULE_stmt = 1
    RULE_simple_stmt = 2
    RULE_small_stmt = 3
    RULE_expr_stmt = 4
    RULE_assign_expr = 5
    RULE_testlist_star_expr = 6
    RULE_augassign = 7
    RULE_test = 8
    RULE_or_test = 9
    RULE_and_test = 10
    RULE_not_test = 11
    RULE_comparison = 12
    RULE_comp_op = 13
    RULE_star_expr = 14
    RULE_expr = 15
    RULE_xor_expr = 16
    RULE_and_expr = 17
    RULE_shift_expr = 18
    RULE_arith_expr = 19
    RULE_term = 20
    RULE_factor = 21
    RULE_power = 22
    RULE_atom_expr = 23
    RULE_trailer = 24
    RULE_arglist = 25
    RULE_argument = 26
    RULE_compound_stmt = 27
    RULE_while_stmt = 28
    RULE_for_stmt = 29
    RULE_range_func = 30
    RULE_funcdef = 31
    RULE_parameters = 32
    RULE_typedargslist = 33
    RULE_variadicargs = 34
    RULE_tfpdef = 35
    RULE_yield_expr = 36
    RULE_testlist = 37
    RULE_lambdef = 38
    RULE_subscriptlist = 39
    RULE_comp_for = 40
    RULE_if_stmt = 41
    RULE_suite = 42
    RULE_subscript = 43
    RULE_exprlist = 44
    RULE_print_statement = 45
    RULE_expression = 46

    ruleNames =  [ "file_input", "stmt", "simple_stmt", "small_stmt", "expr_stmt", 
                   "assign_expr", "testlist_star_expr", "augassign", "test", 
                   "or_test", "and_test", "not_test", "comparison", "comp_op", 
                   "star_expr", "expr", "xor_expr", "and_expr", "shift_expr", 
                   "arith_expr", "term", "factor", "power", "atom_expr", 
                   "trailer", "arglist", "argument", "compound_stmt", "while_stmt", 
                   "for_stmt", "range_func", "funcdef", "parameters", "typedargslist", 
                   "variadicargs", "tfpdef", "yield_expr", "testlist", "lambdef", 
                   "subscriptlist", "comp_for", "if_stmt", "suite", "subscript", 
                   "exprlist", "print_statement", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    NEWLINE=6
    NAME=7
    NUMBER=8
    STRING=9
    COMMENT=10
    INDENT=11
    DEDENT=12
    ASSIGN=13
    PLUS=14
    MINUS=15
    STAR=16
    POWER=17
    DIV=18
    MOD=19
    IDIV=20
    AT=21
    LESS_THAN=22
    GREATER_THAN=23
    EQUALS=24
    GT_EQ=25
    LT_EQ=26
    NOT_EQ_1=27
    NOT_EQ_2=28
    OR=29
    XOR=30
    AND=31
    NOT=32
    IS=33
    IN=34
    ELIF=35
    ELSE=36
    IF=37
    COMMA=38
    COLON=39
    SEMI_COLON=40
    LEFT_SHIFT=41
    RIGHT_SHIFT=42
    ADD_ASSIGN=43
    SUB_ASSIGN=44
    MULT_ASSIGN=45
    AT_ASSIGN=46
    DIV_ASSIGN=47
    MOD_ASSIGN=48
    AND_ASSIGN=49
    OR_ASSIGN=50
    XOR_ASSIGN=51
    LEFT_SHIFT_ASSIGN=52
    RIGHT_SHIFT_ASSIGN=53
    POWER_ASSIGN=54
    IDIV_ASSIGN=55
    AWAIT=56
    ATOM=57
    DIGIT=58
    LETTER=59
    WHITESPACE=60
    DEF=61
    WHILE=62
    FOR=63
    RANGE=64
    YIELD=65
    LAMBDA=66
    TILDE=67
    PRINT=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(my_grammarParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.NEWLINE)
            else:
                return self.getToken(my_grammarParser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.StmtContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.StmtContext,i)


        def getRuleIndex(self):
            return my_grammarParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = my_grammarParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 6)) & ~0x3f) == 0 and ((1 << (_la - 6)) & 2560296390307611393) != 0):
                self.state = 96
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 94
                    self.match(my_grammarParser.NEWLINE)
                    pass
                elif token in [14, 15, 37, 57, 61, 62, 63, 67]:
                    self.state = 95
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(my_grammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(my_grammarParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(my_grammarParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = my_grammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 57, 67]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.simple_stmt()
                pass
            elif token in [37, 61, 62, 63]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.Small_stmtContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.Small_stmtContext,i)


        def NEWLINE(self):
            return self.getToken(my_grammarParser.NEWLINE, 0)

        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.SEMI_COLON)
            else:
                return self.getToken(my_grammarParser.SEMI_COLON, i)

        def getRuleIndex(self):
            return my_grammarParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = my_grammarParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.small_stmt()
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(my_grammarParser.SEMI_COLON)
                    self.state = 109
                    self.small_stmt() 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 115
                self.match(my_grammarParser.SEMI_COLON)


            self.state = 118
            self.match(my_grammarParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Small_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_stmt(self):
            return self.getTypedRuleContext(my_grammarParser.Expr_stmtContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_small_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmall_stmt" ):
                listener.enterSmall_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmall_stmt" ):
                listener.exitSmall_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSmall_stmt" ):
                return visitor.visitSmall_stmt(self)
            else:
                return visitor.visitChildren(self)




    def small_stmt(self):

        localctx = my_grammarParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_small_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.expr_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(my_grammarParser.ExprContext,0)


        def assign_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.Assign_exprContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.Assign_exprContext,i)


        def getRuleIndex(self):
            return my_grammarParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = my_grammarParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.expr()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 123
                self.assign_expr()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(my_grammarParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(my_grammarParser.ExprContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_assign_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_expr" ):
                listener.enterAssign_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_expr" ):
                listener.exitAssign_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_expr" ):
                return visitor.visitAssign_expr(self)
            else:
                return visitor.visitChildren(self)




    def assign_expr(self):

        localctx = my_grammarParser.Assign_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(my_grammarParser.ASSIGN)
            self.state = 130
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Testlist_star_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.TestContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.TestContext,i)


        def star_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.Star_exprContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.Star_exprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.COMMA)
            else:
                return self.getToken(my_grammarParser.COMMA, i)

        def getRuleIndex(self):
            return my_grammarParser.RULE_testlist_star_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestlist_star_expr" ):
                listener.enterTestlist_star_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestlist_star_expr" ):
                listener.exitTestlist_star_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestlist_star_expr" ):
                return visitor.visitTestlist_star_expr(self)
            else:
                return visitor.visitChildren(self)




    def testlist_star_expr(self):

        localctx = my_grammarParser.Testlist_star_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_testlist_star_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 32, 57, 66, 67]:
                self.state = 132
                self.test()
                pass
            elif token in [16]:
                self.state = 133
                self.star_expr()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 143
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 136
                    self.match(my_grammarParser.COMMA)
                    self.state = 139
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [14, 15, 32, 57, 66, 67]:
                        self.state = 137
                        self.test()
                        pass
                    elif token in [16]:
                        self.state = 138
                        self.star_expr()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 145
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 146
                self.match(my_grammarParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AugassignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD_ASSIGN(self):
            return self.getToken(my_grammarParser.ADD_ASSIGN, 0)

        def SUB_ASSIGN(self):
            return self.getToken(my_grammarParser.SUB_ASSIGN, 0)

        def MULT_ASSIGN(self):
            return self.getToken(my_grammarParser.MULT_ASSIGN, 0)

        def AT_ASSIGN(self):
            return self.getToken(my_grammarParser.AT_ASSIGN, 0)

        def DIV_ASSIGN(self):
            return self.getToken(my_grammarParser.DIV_ASSIGN, 0)

        def MOD_ASSIGN(self):
            return self.getToken(my_grammarParser.MOD_ASSIGN, 0)

        def AND_ASSIGN(self):
            return self.getToken(my_grammarParser.AND_ASSIGN, 0)

        def OR_ASSIGN(self):
            return self.getToken(my_grammarParser.OR_ASSIGN, 0)

        def XOR_ASSIGN(self):
            return self.getToken(my_grammarParser.XOR_ASSIGN, 0)

        def LEFT_SHIFT_ASSIGN(self):
            return self.getToken(my_grammarParser.LEFT_SHIFT_ASSIGN, 0)

        def RIGHT_SHIFT_ASSIGN(self):
            return self.getToken(my_grammarParser.RIGHT_SHIFT_ASSIGN, 0)

        def POWER_ASSIGN(self):
            return self.getToken(my_grammarParser.POWER_ASSIGN, 0)

        def IDIV_ASSIGN(self):
            return self.getToken(my_grammarParser.IDIV_ASSIGN, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_augassign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAugassign" ):
                listener.enterAugassign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAugassign" ):
                listener.exitAugassign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAugassign" ):
                return visitor.visitAugassign(self)
            else:
                return visitor.visitChildren(self)




    def augassign(self):

        localctx = my_grammarParser.AugassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_augassign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 72048797944905728) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.Or_testContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.Or_testContext,i)


        def IF(self):
            return self.getToken(my_grammarParser.IF, 0)

        def ELSE(self):
            return self.getToken(my_grammarParser.ELSE, 0)

        def test(self):
            return self.getTypedRuleContext(my_grammarParser.TestContext,0)


        def lambdef(self):
            return self.getTypedRuleContext(my_grammarParser.LambdefContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest" ):
                return visitor.visitTest(self)
            else:
                return visitor.visitChildren(self)




    def test(self):

        localctx = my_grammarParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_test)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 32, 57, 67]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.or_test()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==37:
                    self.state = 152
                    self.match(my_grammarParser.IF)
                    self.state = 153
                    self.or_test()
                    self.state = 154
                    self.match(my_grammarParser.ELSE)
                    self.state = 155
                    self.test()


                pass
            elif token in [66]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.lambdef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_testContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.And_testContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.And_testContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.OR)
            else:
                return self.getToken(my_grammarParser.OR, i)

        def getRuleIndex(self):
            return my_grammarParser.RULE_or_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_test" ):
                listener.enterOr_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_test" ):
                listener.exitOr_test(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr_test" ):
                return visitor.visitOr_test(self)
            else:
                return visitor.visitChildren(self)




    def or_test(self):

        localctx = my_grammarParser.Or_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_or_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.and_test()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 163
                self.match(my_grammarParser.OR)
                self.state = 164
                self.and_test()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_testContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
